多线程(尽量稳定版本)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,24 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(ImMesh)
 
-SET(CMAKE_BUILD_TYPE "Debug")
+SET(CMAKE_BUILD_TYPE "release")
 
 ADD_COMPILE_OPTIONS(-std=c++17 )
 
 add_definitions(-DROOT_DIR=\"${CMAKE_CURRENT_SOURCE_DIR}/\")
+# 防止一直出现什么内联错误...
+add_compile_options(-fno-inline -g)
+#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fexceptions" )
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fexceptions" )
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
+#set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fsanitize=address -g")
 
-if (ENABLE_ASAN)
-    message(STATUS "build with ASAN")
-#    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
-    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fsanitize=address -g")
-endif ()
+
+#if (ENABLE_ASAN)
+#    message(STATUS "build with ASAN")
+##    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
+#    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fsanitize=address -g")
+#endif ()
 
 
 set(CMAKE_CXX_STANDARD 17)
@@ -23,7 +27,7 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 
 # 优化策略设置 O1 与 O3 为什么程序出现的错误是不一样的
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++17 -g -O1 -ltbb -lboost_system -msse2 -msse3 -pthread -w")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++17 -g -O3 -ltbb -lboost_system -msse2 -msse3 -pthread -w")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++17 -g -O3 -ltbb -lboost_system -msse2 -msse3 -pthread -w") # -Wall
 
 message("Current CPU archtecture: ${CMAKE_SYSTEM_PROCESSOR}")
@@ -77,6 +81,7 @@ find_package(Eigen3 REQUIRED)
 find_package(PCL REQUIRED)
 find_package(OpenCV REQUIRED)
 find_package(CGAL REQUIRED)
+
 FIND_PACKAGE(Boost REQUIRED COMPONENTS filesystem iostreams program_options system serialization)
 set(Sophus_LIBRARIES libSophus.so)
 
@@ -167,6 +172,7 @@ target_link_libraries(ImMesh_mapping
         ${PYTHON_LIBRARIES}
         CGAL::CGAL
         tbb
+
         ${OpenCV_LIBRARIES}
         ${Boost_LIBRARIES}
         ${Boost_SYSTEM_LIBRARIES}
