--- a/config/avia.yaml
+++ b/config/avia.yaml
@@ -1,21 +1,24 @@
 %YAML:1.0
 ---
 feature_extract_enable : 0
-point_filter_num : 1
+point_filter_num : 2
 max_iteration : 4
 dense_map_enable : 1
 filter_size_surf : 0.4
 filter_size_map : 0.4
+filter_size_corner : 0.5 
 cube_side_length : 1000
 debug : 0
 min_img_count : 150000
 grid_size : 40
 patch_size : 8
-img_enable : 0
+img_enable : 1
 lidar_enable : 1
 outlier_threshold : 78 # 78 100 156
 img_point_cov : 1000 #100
 laser_point_cov : 0.001 #0.001
+gui_font_size : 20
+
 
 common:
     lid_topic:  "/livox/lidar"
@@ -26,6 +29,7 @@ preprocess:
     scan_line: 6
     timestamp_unit: 2
     blind: 1 # blind x m disable
+    calib_laser: true
 
 mapping:
     imu_en: true
@@ -39,10 +43,10 @@ mapping:
     # extrinsic_R: [ 1, 0, 0,
     #                0, 1, 0,
     #                0, 0, 1]
-    extrinsic_T: [ 0.04165, 0.02326, -0.0284 ]
-    extrinsic_R: [ 1, 0, 0,
-                   0, 1, 0,
-                   0, 0, 1]
+    # extrinsic_T: [ 0.04165, 0.02326, -0.0284 ]
+    # extrinsic_R: [ 1, 0, 0,
+    #               0, 1, 0,
+    #               0, 0, 1]
 
 voxel:
     voxel_map_en: true
@@ -56,6 +60,8 @@ voxel:
     max_layer: 2
     max_points_size: 100
     layer_init_size: [5,5,5,5,5]
+    match_eigen_value: 0.0025
+    layer: 1
         
 publish:
     path_en:  false
@@ -63,6 +69,7 @@ publish:
     dense_publish_en: false       # false: low down the points number in a global-frame point clouds scan.
     scan_bodyframe_pub_en: false  # true: output the point cloud scans in IMU-body-frame
     effect_point_pub: true
+    pub_point_skip: 1
 
 pcd_save:
     pcd_save_en: true
@@ -72,8 +79,8 @@ pcd_save:
 
 image_save:
     img_save_en: false
-    rot_dist: 0.0 # 0.05
-    pos_dist: 0.0 # 0.15
+    rot_dist: 0.01 # 0.05
+    pos_dist: 0.01 # 0.15
     interval: 1
 
 meshing:
@@ -82,6 +89,12 @@ meshing:
     region_size: 10.0               # Size of region
     number_of_pts_append_to_map: 10000  # Number of pts appending to map (per-frame)
     if_draw_mesh: 1
+    maximum_thread_for_rec_mesh: 20
+    distance_scale : 0.5
+    enable_mesh_rec: 1
+    
 
+camera:
+    img_topic: "/camera/image_color/compressed"
 
     
